--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pandoc-glossary-filter"
-version = "0.1.0"
+version = "0.2.0"
 description = "Pandoc filter used to generate a glossary and an acronym list common to a set of documents"
 authors = ["Augusto Zanellato <augusto.zanellato@gmail.com>"]
 readme = "README.md"
@@ -8,9 +8,9 @@ packages = [{include = "pandoc_glossary_filter"}]
 
 [tool.poetry.dependencies]
 python = "^3.7.2"
-pandocfilters = {git = "https://github.com/sevenelevendevunipd/pandocfilters.git", rev = "editable_meta"}
 pyyaml = "^6.0"
 loguru = "^0.6.0"
+panflute = "^2.2.3"
 
 [tool.poetry.scripts]
 pandoc-glossary = 'pandoc_glossary_filter:main'
