--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [tool.poetry]
 name = "pandoc-glossary-filter"
-version = "0.2.0"
+version = "0.2.1"
 description = "Pandoc filter used to generate a glossary and an acronym list common to a set of documents"
 authors = ["Augusto Zanellato <augusto.zanellato@gmail.com>"]
 readme = "README.md"
+license = "GPL-3.0-or-later"
 packages = [{include = "pandoc_glossary_filter"}]
 
 [tool.poetry.dependencies]
